2003-09-06  Anders Carlsson  <andersca@gnome.org>

	* modulesets/gnome24.modules: Use gnome-2-4 branch
	for gconf-editor.

2003-09-05  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome22.modules:
	* modulesets/gnome24.modules: added gnome-themes-extras, libgda, libgnomedb,
	mergeant, gtranslator, gnome-spell, libgnomecups, gnome-cups-manager,
	gnome-vfsmm, libxml++, bakery, bakery_gnomeui, gtk-sharp; added dependencies
	and autogenargs for gnumeric and upped version of xchat, removed
	monkey-media dependency for rhythmbox (22 only).
	* modulesets/gnome24.modules (only): added cairo-gtk-engine; changed
	revision of gnome-games, nautilus-cd-burner, yelp, and acme to gnome-2-4;
	changed revision of gnomemeeting to gnome_2_4; changed revision of
	evolution, gtkhtml, and gal to evolution-1-4-branch; changed revision of
	glimmer to new-gtksourceview.

2003-09-05  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* modulesets/gnome24.modules: Glimmer "new-gtksourceview" branch has
	been joined with HEAD.

2003-09-02 Mark Finlay<sisob@tuxfamily.org>

	* modulesets/gnome24.modules: Adding sound-juicer and gnome-network

2003-08-31  Alex Duggan  <aldug@astrolinux.com>

	* modulesets/gnome24.modules: removed gal dep from gnumeric

2003-08-30 Mark Finlay<sisob@tuxfamily.org>

	* modulesets/gnome24.modules: Adding gst-plugins as a dep of gnome-media

2003-08-28  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/gnome24.modules:

	Change epiphany branch to gnome-2-4

Mon Aug 25 14:00:00 2003  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome24.modules: revert it back to TAG, as epiphany
	doesn't build with 1.4.1pre yet.  grr... BRANCH doesn't build
	either with gcc 3.3.  When 1.4.1 comes out we can build against
	that.

Mon Aug 25 10:57:13 2003  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome24.modules: change MOZILLA_1_4_TAG to
	MOZILLA_1_4_BRANCH as the TAGGED version doesn't build with recent
	compilers.

	* modulesets/gnome24.modules: libsoup-2-0-branch