@@ -1,3 +1,8 @@
+2003-09-07  James Henstridge  <james@daa.com.au>
+
+	* module.py (read_module_set): allow user to override branch tag
+	and autogen args for mozilla, like they can for other CVS modules.
+
 2003-09-06  Anders Carlsson  <andersca@gnome.org>
 
 	* modulesets/gnome24.modules: Use gnome-2-4 branch
